# Topo-DDA-forWin64

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  argdiff.txt  setup.py
Topo-DDA-forWin64/: .editorconfig  AProductCore.cpp  AProductCore.h  Binarize Structure.ipynb  Build_geometry.m  Build_geometry_2Dextrude.m  Build_geometry_2Dextrude_full.asv  Build_geometry_2Dextrude_full.m  Build_geometry_unbinarized.m  CoreStructure.cpp  CoreStructure.h  DDAModel.cpp  DDAModel.h  DDA_geo_cylinder_it300_piecewise_aboslute_binarized_extrude_unionerror.m  DDA_geo_cylinder_it300_piecewise_aboslute_unbinarized.m  DDA_geo_fillet.m  DDA_sample_material.m  DDA_template.m  DDA_template.mph  EvoDDAModel.cpp  EvoDDAModel.h  Obj Function.ipynb  ObjDDAModel.cpp  ObjDDAModel.h  Space.cpp  Space.h  SpacePara.cpp  SpacePara.h  Structure.cpp  Structure.h  StructureAndSpace.cpp  StructureAndSpace.h  StructureSpacePara.cpp  StructureSpacePara.h  Tools.h  Topo-DDA-forWin64.vcxproj  Topo-DDA-forWin64.vcxproj.filters  cylinder_it200_sym_epsilon_0.100000_weight_0.100000Adjointiterations.txt  cylinder_it200_sym_epsilon_0.100000_weight_0.100000Originiterations.txt  cylinder_it200_sym_epsilon_0.100000_weight_0.100000convergence.txt  (+19 more)
Topo-DDA-forWin64/.ipynb_checkpoints/: Binarize Structure-checkpoint.ipynb  Obj Function-checkpoint.ipynb
Topo-DDA-forWin64/Debug/: kernel.cu-539221808.deps  kernel.cu.cache
Topo-DDA-forWin64/Debug/Topo-DDA.4fd79967.tlog/: CudaCompile.write.1u.tlog  Topo-DDA-forWin64.lastbuildstate
Topo-DDA-forWin64/para_150nm_cylin_atbound_lam542_it200_beta100_eps0.1_sym_AutomationTest/: 2D-TiO2.ini  Adjointiterations.txt  CoreStructure0.txt  CoreStructure299Binarized.txt  CoreStructure299Rounded.txt  EndofPiecewiseStructure.txt  Originiterations.txt  commondata.txt  convergence.txt  convergenceWithPenalty.txt  convergenceWithoutPenalty.txt  hourglass.txt
Topo-DDA-forWin64/para_150nm_cylin_atbound_lam542_it200_beta100_eps0.1_sym_AutomationTest/CoreStructure/: CoreStructure0.txt  CoreStructure1.txt  CoreStructure10.txt  CoreStructure100.txt  CoreStructure101.txt  CoreStructure102.txt  CoreStructure103.txt  CoreStructure104.txt  CoreStructure105.txt  CoreStructure106.txt  CoreStructure107.txt  CoreStructure108.txt  CoreStructure109.txt  CoreStructure11.txt  CoreStructure110.txt  CoreStructure111.txt  CoreStructure112.txt  CoreStructure113.txt  CoreStructure114.txt  CoreStructure115.txt  CoreStructure116.txt  CoreStructure117.txt  CoreStructure118.txt  CoreStructure119.txt  CoreStructure12.txt  CoreStructure120.txt  CoreStructure121.txt  CoreStructure122.txt  CoreStructure123.txt  CoreStructure124.txt  CoreStructure125.txt  CoreStructure126.txt  CoreStructure127.txt  CoreStructure128.txt  CoreStructure129.txt  CoreStructure13.txt  CoreStructure130.txt  CoreStructure131.txt  CoreStructure132.txt  CoreStructure133.txt  (+160 more)
Topo-DDA-forWin64/para_150nm_cylin_atbound_lam542_it200_beta100_eps0.1_sym_AutomationTest/Model_output/: Model_results0it0.txt  Model_results0it1.txt  Model_results0it10.txt  Model_results0it100.txt  Model_results0it101.txt  Model_results0it102.txt  Model_results0it103.txt  Model_results0it104.txt  Model_results0it105.txt  Model_results0it106.txt  Model_results0it107.txt  Model_results0it108.txt  Model_results0it109.txt  Model_results0it11.txt  Model_results0it110.txt  Model_results0it111.txt  Model_results0it112.txt  Model_results0it113.txt  Model_results0it114.txt  Model_results0it115.txt  Model_results0it116.txt  Model_results0it117.txt  Model_results0it118.txt  Model_results0it119.txt  Model_results0it12.txt  Model_results0it120.txt  Model_results0it121.txt  Model_results0it122.txt  Model_results0it123.txt  Model_results0it124.txt  Model_results0it125.txt  Model_results0it126.txt  Model_results0it127.txt  Model_results0it128.txt  Model_results0it129.txt  Model_results0it13.txt  Model_results0it130.txt  (+163 more)
Topo-DDA-forWin64/template/: 2D-TiO2.ini  grid_xy330nm_z150nm_d15nm.txt  para_150nm_cylin_atbound.txt
Topo-DDA-forWin64/template_squarecenter_12x12x4/: 2D-TiO2.ini  commondata.txt  para_squarecenter_xy550nm_z150nm_d50nm.txt
dda_model.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python_bindings/: PythonBindings.cpp
python_bindings/dda_model/: __init__.py
python_bindings/dda_model.egg-info/: SOURCES.txt
python_tests/: PythonVsCError.py  model_example.py  test_DDAModel.py  test_DDAModelWrapper.py
python_tests/data/: geometry.txt
src/: AProductCore.cpp  AProductCore.h  CMakeCache.txt  CoreStructure.cpp  CoreStructure.h  DDAModel.cpp  DDAModel.h  EvoDDAModel.cpp  EvoDDAModel.h  FOM.cpp  FilterOption.cpp  FilterOption.h  INIReader.h  Kernel.h  Makefile  Model.cpp  ObjDDAModel.cpp  ObjDDAModel.h  ObjReader.cpp  ObjReader.h  Objective.cpp  SiCi.cpp  SiCi.h  StructureAndSpace.cpp  StructureAndSpace.h  StructureSpacePara.cpp  StructureSpacePara.h  Tools.cpp  Tools.h  definition.h  filterReader.cpp  filterReader.h  kernel.cu  main.cpp  resource.h  symReader.cpp  symReader.h  test.py  test_model.py  testtemplate.cpp  (+1 more)
src/data/: SiCi.py  dielectrics.txt
(+13 files in other folders)
